# planet-client-python

./: .coverage  .coverage.c02g70u0ml86.lan.39113.005847  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .yapfignore  20220505_172446_09_2435_metadata.json  Branch-Working-and-Release-Notes.txt  CHANGES.txt  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  MANIFEST.in  Makefile  OAuth-Reviewer-and-Release-Notes.md  README.md  README.rst  RELEASE-PLANNING-3.0.md  RELEASE.md  clip.geojson  example_output.md  genindex.html  gh-release  index.html  manifest.json  mkdocs.yml  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  request-1.json  requirements-dev.txt  requirements.txt  requirements.txt.frozen  search.html  searchindex.js  setup.cfg  (+3 more)
.github/: publish_testpypi.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: autopublish-testpypi.yml  publish-pypi.yml  release.yml  test.yml  tests.yaml
_modules/: index.html
_sources/: index.rst.txt
_sources/api/: examples.rst.txt  examples.txt  index.rst.txt  reference.rst.txt
_sources/cli/: examples.rst.txt  index.rst.txt  reference.rst.txt  reference.txt
_static/: alabaster.css  custom.css  documentation_options.js
api/: examples.html  index.html  reference.html
build-tools/: README.md
build-tools/make/: common-defs.mk  common-rules.mk  defs.mk  docker-defs.mk  docker-rules.mk  go-defs.mk  go-rules.mk  printenv-rules.mk  python-defs.mk  python-docker-rules.mk  python-rules.mk  rules.mk  version-defs.mk  version-rules.mk
cli/: _reference_forward.html  examples.html  index.html  reference.html
custom_theme/: home.html  main.html
data/: README.md  orders_product_bundle_2020_03_10.json
design-docs/: CLI-Core.md  CLI-Data.md  CLI-Destinations.md  CLI-Orders.md  CLI-Subscriptions.md  README.md  content-gsx-notes.md  content-plan  content-plan.md  content-readthedocs.md
docs/: Makefile  api-auth.md  api.md  cli-concepts.md  cli-plus-tutorial.md  cli-tutorial.md  cli.md  guide.md  index.md  upgrading.md  v2_earlyaccess.md  venv-tutorial.md
docs/auth/: auth-dev-app-managed-apikey.md  auth-dev-app-managed-oauth.md  auth-dev-cli-managed.md  auth-overview.md  auth-sdk.md
docs/cli/: cli-concepts.md  cli-data.md  cli-destinations.md  cli-guide.md  cli-intro.md  cli-orders.md  cli-plus-tutorial.md  cli-reference.md  cli-subscriptions.md  cli-tips-tricks.md  cli-tutorial.md
docs/custom_theme/: home.html  main.html
docs/data/: geometry.geojson  order-request.json  tools-clip-composite.json
docs/get-started/: get-a-Planet-account.md  get-your-api-key.md  get-your-planet-account.md  quick-start-guide.md  sync-client-quick-start.md  upgrading-v3.md  upgrading.md  v2_earlyaccess.md  venv-tutorial.md
docs/hooks/: mkdocs_hooks.py
docs/overrides/: home.html
docs/python/: async-sdk-guide.md  sdk-client-auth.md  sdk-data.md  sdk-guide.md  sdk-intro.md  sdk-orders.md  sdk-reference.md  sdk-subscriptions.md
docs/resources/: index.md
docs/sdk/: sdk-guide.md
docs/source/: alabaster_planet.py  (+4 more)
examples/: README.md  data_download_multiple_assets.py  data_search_sync.py  download-tiffs.py  download_multiple_assets.py  mosaics-cli.sh  orders_create_and_download_multiple_orders.py  orders_multiple_orders.py  quota_api_examples.py  search-items.py  test_examples.py
integration_tests/: conftest.py  test_cli_download.py  test_download.py
planet/: __init__.py  __version__.py  auth.py  auth_builtins.py  client.py  clk.py  collect.py  constants.py  data_filter.py  exceptions.py  geojson.py  http.py  io.py  models.py  oauth.py  order_request.py  quota_request.py  reporting.py  specs.py  subscription_request.py
reference/: api.html  cli.html
scripts/: aorders_api.py  order_download.py  orders_api.py  planet.sh  session_configuration.py  test_order_download.py
tests/: _common.py  conftest.py  pytest.ini.main  test_atomic.py  test_basemaps_client.py  test_cli.py  test_client.py  test_dispatch.py  test_downloader.py  test_filters.py  test_helpers.py  test_http.py  test_mod.py  test_models.py  test_mosaics.py  test_order_client.py  test_sync.py  test_types.py  test_utils.py  test_v0_cli.py  test_v1_cli.py  util.py
(+319 files in other folders)
