[bdist_wheel]
universal: 1

[metadata]
license_file: LICENSE

[tool:pytest]
addopts =
    --cov=planet
    --cov=tests
    --cov-report=term-missing
    --cov-report=xml
    --cov-fail-under 97
    -rxXs

[coverage:run]
source = planet,tests
branch = True

[coverage:report]
skip_covered = True
show_missing = True

[yapf]
based_on_style = pep8
