[bdist_wheel]
universal: 1

[metadata]
license_file: LICENSE

[tool:pytest]
addopts =
    -rxXs

[coverage:run]
source = planet,tests
branch = True

[coverage:report]
skip_covered = True
show_missing = True
fail_under = 98

[yapf]
based_on_style = pep8
split_all_top_level_comma_separated_values=true

[flake8]
ignore = E126,E501,W503,W504
