[options]
packages = planet, planet.cli, planet.clients, planet.data

[options.packages.find]
exclude = examples, tests

; [options.package_data]
; planet = data/*

[tool:pytest]
addopts =
    -rxXs

[coverage:run]
source = planet, tests
branch = True

[coverage:report]
skip_covered = True
show_missing = True
fail_under = 98

[yapf]
based_on_style = pep8
split_all_top_level_comma_separated_values=true

[flake8]
ignore = E121,E126,E501,W50